feat: add dedent string

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dedent-js": "^1.0.1",
     "node-html-parser": "^6.1.12",
     "puppeteer": "^22.0.0",
     "telegraf": "^4.15.3"
