--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+prisma/dev.db
+
 # End of https://www.toptal.com/developers/gitignore/api/node,windows
 
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
